--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
     <div class="card">
       <div class="card-content">
         <div class="icon">👻</div>
+        <a href="secret.html" class="btn-link">
         <button class="btn">Secret</button>
+        </a>
       </div>
     </div>
     <div class="card">
