--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
       display: block;
     }
 
+    .iframe-container {
+      margin-top: 2rem;
+      width: 100%;
+      max-width: 800px;
+      height: 500px;
+      margin-left: auto;
+      margin-right: auto;
+      border: 1px solid #333;
+      border-radius: 1rem;
+      overflow: hidden;
+      box-shadow: 0 0 15px #000;
+    }
+
     .bg-image {
       position: fixed;
       top: 0;
@@ -124,46 +137,57 @@
       }
     }
   </style>
+  <script>
+    function loadContent(page) {
+      const iframe = document.getElementById('content-frame');
+      iframe.src = page;
+    }
+  </script>
 </head>
 <body>
   <h1>AnthroFaked</h1>
   <div class="grid">
-    <a href="https://www.protectedtext.com/anthrofaked" class="card-link">
+    <div class="card-link" onclick="loadContent('https://www.protectedtext.com/anthrofaked')">
       <div class="card">
         <div class="card-content">
           <div class="icon">👻</div>
           <div class="btn">Secret</div>
         </div>
       </div>
-    </a>
+    </div>
 
-    <a href="gallery.html" class="card-link">
+    <div class="card-link" onclick="loadContent('gallery.html')">
       <div class="card">
         <div class="card-content">
           <div class="icon">💀</div>
           <div class="btn">Gallery</div>
         </div>
       </div>
-    </a>
+    </div>
 
-    <a href="notes.html" class="card-link">
+    <div class="card-link" onclick="loadContent('notes.html')">
       <div class="card">
         <div class="card-content">
           <div class="icon">👁️</div>
           <div class="btn">Notes</div>
         </div>
       </div>
-    </a>
+    </div>
 
-    <a href="logout.html" class="card-link">
+    <div class="card-link" onclick="loadContent('logout.html')">
       <div class="card">
         <div class="card-content">
           <div class="icon">🧠</div>
           <div class="btn">Logout</div>
         </div>
       </div>
-    </a>
+    </div>
   </div>
+
+  <div class="iframe-container">
+    <iframe id="content-frame" src="" width="100%" height="100%" frameborder="0"></iframe>
+  </div>
+
   <div class="bg-image"></div>
 </body>
 </html>
